# verilog-vcd-parser

./: CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml
.github/workflows/: cmake.yml
cmake/: config.cmake.in
include/: CMakeLists.txt
include/vcd-parser/: VCDComparisons.hpp  VCDFile.hpp  VCDFileParser.hpp  VCDParser.ypp  VCDPrinters.hpp  VCDScanner.l  VCDTimedValue.hpp  VCDTypes.hpp  VCDValue.hpp
src/: VCDStandalone.cpp
tests/: CMakeLists.txt  test.cpp
tests/testfiles/: simple.vcd
